Fri Nov 13 16:34:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: These algorithms
	were designed to cut edges longer than 2 (in a unit mesh).  But
	there was a bug, edges smaller than 1+sqrt(2) could not be split,
	and thus final mesh could contain edges longer than 2.
	With these changes, the number of nodes is increased by 10%-20%.
	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: Set minlen to
	0.95/sqrt(2) instead of 1/sqrt(2), this helps avoiding edges larger
	than sqrt(2).

Sat Nov  7 14:55:24 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildRidges): Change
	its argument, it is no more an angle in degree, but the dot product
	of normals.

Thu Nov  5 13:23:34 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Fix VTK export,
	the number of triangles cannot be computed from triangle file length.

Mon Nov  2 22:07:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/UNVReader.java: Read UNV elements 92
	(parabolic triangles) and convert them to linear triangles.
	* src/org/jcae/mesh/amibe/util/UNVReader.java: Fix
	NullPointerException when beam elements are listed in group list.

Wed Oct  7 14:16:47 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java: Change
	handling of virtual planes on boundary edges.

Fri Sep  4 11:46:45 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/Remesh.java: New class.

Fri Aug 28 12:15:35 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java:
	Do not check if vertex is mutable in getMatrix3DLocalFrame(),
	this check must be performed by the caller.